# versatile_reader

./: CMakeLists.txt  README.md  main.cpp
include/: csvreader_impl.hpp  map_components.hpp  reader_interface.hpp
src/: csvreader_impl.cpp
test/: test_file.csv
